- some corrections; - create competition; - changes in yaml.
